# circu.js

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy-docs.yml
api/: hierarchy.html  index.html  modules.html
api/assets/: hierarchy.js  highlight.css  navigation.js  search.js
api/classes/: error.CModuleError.Error.html  sqlite3.CModuleSQLite3.Sqlite3Handle.html  sqlite3.CModuleSQLite3.Sqlite3Stmt.html  sys.CModuleSys.Module.html
api/enums/: ffi.CModuleFFI.FfiType.html  fs.CModuleFS.FileType.html  fs.CModuleFS.OpenMode.html  fs.CModuleFS.SymlinkType.html  fswatch.CModuleFSWatch.FsEvent.html  os.CModuleOS.AddressFamily.html  os.CModuleOS.StandardFileDescriptor.html  posix-socket.CModulePosixSocket.AddressFamily.html  posix-socket.CModulePosixSocket.SocketEvent.html  posix-socket.CModulePosixSocket.SocketOption.html  posix-socket.CModulePosixSocket.SocketOptionLevel.html  posix-socket.CModulePosixSocket.SocketType.html  process.CModuleProcess.ExitCode.html  process.CModuleProcess.ProcessSignal.html  streams.CModuleStreams.Constants.html  udp.CModuleUDP.Constants.html  ws.CModuleWebSocket.ReadyState.html  xhr.ReadyState.html  xhr.ResponseType.html
api/functions/: dns.CModuleDNS.getaddrinfo.html  engine.CModuleEngine.compile.html  engine.CModuleEngine.deserialize.html  engine.CModuleEngine.evalBytecode.html  engine.CModuleEngine.serialize.html  engine.CModuleEngine.setMaxStackSize.html  engine.CModuleEngine.setMemoryLimit.html  ffi.CModuleFFI.ffi_load_native.html  fs.CModuleFS.chmod.html  fs.CModuleFS.chown.html  fs.CModuleFS.copyFile.html  fs.CModuleFS.lchown.html  fs.CModuleFS.link.html  fs.CModuleFS.lstat.html  fs.CModuleFS.lutime.html  fs.CModuleFS.makeTempDir.html  fs.CModuleFS.mkdir.html  fs.CModuleFS.mkdirSync.html  fs.CModuleFS.mkstemp.html  fs.CModuleFS.newStdioFile.html  fs.CModuleFS.open.html  fs.CModuleFS.readDir.html  fs.CModuleFS.readFile.html  fs.CModuleFS.readLink.html  fs.CModuleFS.realPath.html  fs.CModuleFS.rename.html  fs.CModuleFS.rmdir.html  fs.CModuleFS.stat.html  fs.CModuleFS.statFs.html  fs.CModuleFS.statSync.html  fs.CModuleFS.symlink.html  fs.CModuleFS.unlink.html  fs.CModuleFS.utime.html  fswatch.CModuleFSWatch.watch.html  index.print.html  os.CModuleOS.availableParallelism.html  os.CModuleOS.chdir.html  os.CModuleOS.cpuInfo.html  os.CModuleOS.cwd.html  os.CModuleOS.envKeys.html  (+58 more)
api/interfaces/: dns.CModuleDNS.AddressInfo.html  dns.CModuleDNS.GetAddrInfoOptions.html  engine.CModuleEngine.EngineVersions.html  engine.CModuleEngine.GarbageCollector.html  ffi.CModuleFFI.FfiCif.html  ffi.CModuleFFI.FfiClosure.html  ffi.CModuleFFI.FfiTypeObject.html  ffi.CModuleFFI.UvDlSym.html  ffi.CModuleFFI.UvLib.html  fs.CModuleFS.DirEnt.html  fs.CModuleFS.DirHandle.html  fs.CModuleFS.FileHandle.html  fs.CModuleFS.StatFsResult.html  fs.CModuleFS.StatResult.html  fswatch.CModuleFSWatch.FsWatcher.html  index.ImportMeta.html  index.TjsModules.html  os.CModuleOS.NetworkInterface.html  os.CModuleOS.SystemInfo.html  os.CModuleOS.UserInfo.html  posix-ffi.CModulePosixFFI.CTypes.html  posix-ffi.CModulePosixFFI.DLHandler.html  posix-socket.CModulePosixSocket.PosixSocket.html  process.CModuleProcess.ChildProcess.html  process.CModuleProcess.ProcessOptions.html  server.CModuleServer.HttpRequest.html  server.CModuleServer.HttpResponse.html  server.CModuleServer.HttpServer.html  server.CModuleServer.ServerOptions.html  server.CModuleServer.UpgradedSocket.html  signals.CModuleSignals.SignalHandler.html  streams.CModuleStreams.Pipe.html  streams.CModuleStreams.Stream.html  streams.CModuleStreams.TCP.html  streams.CModuleStreams.TTY.html  udp.CModuleUDP.UDP.html  worker.CModuleWorker.MessagePipe.html  worker.CModuleWorker.Worker.html  ws.CModuleWebSocket.ErrorEvent.html  ws.CModuleWebSocket.WebSocket.html  (+2 more)
api/modules/: dns.CModuleDNS.html  dns.html  engine.CModuleEngine.html  engine.html  error.CModuleError.html  error.html  ffi.CModuleFFI.html  ffi.html  fs.CModuleFS.html  fs.html  fswatch.CModuleFSWatch.html  fswatch.html  index.html  os.CModuleOS.html  os.html  posix-ffi.CModulePosixFFI.html  posix-ffi.html  posix-socket.CModulePosixSocket.html  posix-socket.html  process.CModuleProcess.html  process.html  pty.CModulePty.html  pty.html  server.CModuleServer.html  server.html  signals.CModuleSignals.html  signals.html  sqlite3.CModuleSQLite3.html  sqlite3.html  streams.CModuleStreams.html  streams.html  sys.CModuleSys.html  sys.html  timer.CModuleTimer.html  timer.html  udp.CModuleUDP.html  udp.html  worker.CModuleWorker.html  worker.html  ws.CModuleWebSocket.html  (+2 more)
api/types/: ffi.CModuleFFI.FfiPointer.html  posix-ffi.CModulePosixFFI.CTypesVal.html  posix-ffi.CModulePosixFFI.Handler.html  posix-ffi.CModulePosixFFI.InferFrom.html  posix-ffi.CModulePosixFFI.InferTuple.html  posix-ffi.CModulePosixFFI._AUTO.html  posix-ffi.CModulePosixFFI._DOUBLE.html  posix-ffi.CModulePosixFFI._FLOAT.html  posix-ffi.CModulePosixFFI._INT.html  (+15 more)
example/: http.ts  httpsrv.ts  imports.ts  static.ts  tsrt.js
src/: binary.c  binary.h  cli.c  console.c  curl-utils.c  curl-websocket-utils.c  curl-websocket.c  error.c  hash.h  mem.c  mem.h  mod_algorithm.c  mod_asyncfs.c  mod_crypto.c  mod_dns.c  mod_engine.c  mod_ffi.c  mod_fs.c  mod_fswatch.c  mod_os.c  mod_posix-ffi.c  mod_process.c  mod_pty.c  mod_server.c  mod_sqlite3.c  mod_streams.c  mod_sys.c  mod_udp.c  mod_zlib.c  modules.c  private.h  qjsc.c  signals.c  sourcemap.c  sourcemap.h  timers.c  tjs.h  tsconfig.json  utils.c  utils.h  (+7 more)
src/js/: example.js  (+2 more)
types/: fs.d.ts  index.d.ts  process.d.ts  server.d.ts  xhr.d.ts
(+30 files in other folders)
